--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,16 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+
+# warm up folder
+
+experiments/warm_up/data
+experiments/warm_up/results/seed7/checkpoints
+experiments/warm_up/results/seed8/checkpoints
+experiments/warm_up/results/seed9/checkpoints
+experiments/warm_up/results/seed10/checkpoints
+experiments/warm_up/results/seed11/checkpoints
+
+
