--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,8 @@ experiments/warm_up/wandb
 experiments/warm_up/main.ipynb
 experiments/warm_up/results_reg/seed7/checkpoints
 experiments/warm_up_old
+experiments/warm_up/results_reg/seed7_0.05/checkpoints
+experiments/warm_up/main.ipynb
 
 
 #imagetnet folder
